--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,22 +1,26 @@
 {
-  "version": "2.0.0",
   "tasks": [
     {
-      "label": "build",
-      "type": "shell",
-      "command": "gcc.exe",
-      "args": ["-g", "Kalkulator.c", "-o", "Kalkulator.exe"],
-      /*"options": {
-                "cwd": "D:\\DANE\\BOX_PROJEKTY\\LEARN\\isuee\\C\\Kalkulator"
-            },*/
+      "type": "cppbuild",
+      "label": "C/C++: gcc.exe kompiluj aktywny plik",
+      "command": "C:\\Program Files (x86)\\Embarcadero\\Dev-Cpp\\TDM-GCC-64\\bin\\gcc.exe",
+      "args": [
+        "-fdiagnostics-color=always",
+        "-g",
+        "${file}",
+        "-o",
+        "${fileDirname}\\${fileBasenameNoExtension}.exe"
+      ],
+      "options": {
+        "cwd": "C:\\Program Files (x86)\\Embarcadero\\Dev-Cpp\\TDM-GCC-64\\bin"
+      },
+      "problemMatcher": ["$gcc"],
       "group": {
         "kind": "build",
         "isDefault": true
       },
-      "presentation": {
-        "reveal": "always"
-      },
-      "problemMatcher": ["$gcc"]
+      "detail": "Zadanie wygenerowane przez debuger."
     }
-  ]
+  ],
+  "version": "2.0.0"
 }
