--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
   },
   "terminal.integrated.env.windows": {
     "PATH": "C:\\Program Files (x86)\\Embarcadero\\Dev-Cpp\\TDM-GCC-64\\bin;${env:PATH}"
-  }
+  },
+  "C_Cpp.clang_format_style": "file"
 }
