refactor: update .clang-format and add .editorconfig for consistent code styling

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,4 +1,4 @@
 {
-  "recommendations": ["ms-vscode.cpptools"],
-  "unwantedRecommendations": ["ms-vscode.cpptools-extension-pack"]
+	"recommendations": ["ms-vscode.cpptools", "EditorConfig.EditorConfig"],
+	"unwantedRecommendations": ["ms-vscode.cpptools-extension-pack"]
 }
